2010-03-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (InitializeMagick): Don't initialize locale
	settings in InitializeMagick().  Resolves SourceForge bug #2967282
	"setlocale called by GraphicsMagick".

2010-03-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/{command.c, display.c}: Make sure that 'animate',
	'display', and 'identify' report any error only once, and then
	proceed to the next file name rather than quitting.  Problem was
	reported by Patrick Welche.

2010-03-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Makefile.am: Update PerlMagick/Magick.pm in the
	source tree (as required) since it is distributed source and
	contains the current version number.

2010-03-03  Glenn Randers-Pehrson  <glennrp@simple...>

	* coders/png.c: restored missing "US" in PNG_USER_CHUNK_CACHE_MAX
        at line 102.  Added some (unsigned long) typecasts on print statements
        to stifle warnings.

2010-03-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Updated libpng to 1.2.43.  Resolves CVE-2010-0205 as
	pertains to GraphicsMagick Windows build.

2010-03-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile_DCX_*.sh: Add tests for reading and writing DCX.

	* coders/pcx.c (WritePCXImage): DCX is not the same as PCX so only
	write DCX when requested to (and vice-versa).

	* utilities/tests/convert-pipe-out.sh: New test to verify that
	'convert' can write to stdout.

	* utilities/tests/convert-pipe-in.sh: New test to verify that
	'convert' can read from stdin.

	* utilities/tests/convert-pipe-filter.sh: New test to verify that
	'convert' works properly as a filter.

	* magick/image.c (SetImageInfo): The 'rectify' parameter was found
	to not be sufficient to meet requirements since it was
	overloaded. The utilities would malfunction (hang or throw an
	exception) if requested to write to stdout.  As a result, this
	parameter has been changed to a binary flag type parameter.